# agent-as-a-service

./: .gitignore  README.md
agent-orchestrator/: Dockerfile  Jenkinsfile  k8s.yaml  main.py  requirements.txt
agent-orchestrator-rust/: Cargo.toml  Dockerfile  Jenkinsfile  k8s.yaml
agent-orchestrator-rust/src/: main.rs
agent-worker/: Dockerfile  Jenkinsfile  entrypoint.sh
agent-worker/config/: opencode.json
agent-worker/terraform/: main.tf
agent-worker/tools/: teams-notify.ts
jenkins-embeddings/: Dockerfile  Jenkinsfile.sample  generate_embeddings.py
jira-ingester/: main.py  requirements.txt
jira-ingester/terraform/: .terraform.lock.hcl  main.tf  spec.yaml.tpl
webhook-ingester/: Dockerfile  Jenkinsfile  k8s.yaml  main.py  requirements.txt  secret.sh
webhook-injestor-rust/: Cargo.toml  Dockerfile  Jenkinsfile  k8s.yaml
webhook-injestor-rust/src/: main.rs
webhook-injestor-rust/terraform/: main.tf
