[package]
name = "agent-orchestrator-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.34", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pulsar = "6.7.2"
kube = "0.87.1"
k8s-openapi = { version = "0.20.0", features = ["v1_28"] }
uuid = { version = "1.6", features = ["v4"] }
futures = "0.3"
