[package]
name = "webhook-injestor-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.34", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pulsar = "6.1"
google-cloud-pubsub = "0.22"
google-cloud-googleapis = "0.12"
google-cloud-default = "0.4"
futures = "0.3"
uuid = { version = "1.6", features = ["v4"] }
